examples/negative/effects_phase2/netdns_no_socket_cap.kai
# Negative fixture (issue #352): capability gating at the protocol
# boundary. The whole point of NetDns being a separate effect from
# NetTcp (docs/effects-stdlib.md §`NetDns`) is that a component which
# should resolve names but never open sockets carries `/ NetDns` only
# and is STATICALLY prevented from going further.
#
# `probe` declares `/ NetDns` and tries to call `NetTcp.connect`. The
# typer must reject it: `NetTcp` is not in the row, so the op is not
# handled. This anchors the gating contract in a non-main helper where
# enforcement is visible (main's row would otherwise absorb builtins).
#
# NetDns and NetTcp are both builtin effects (injected by the compiler,
# no import needed), so the fixture needs no stdlib import — the row
# annotation alone drives the gating check.

fn probe(host: String) : Bool / NetDns = match NetTcp.connect(host, 80) {
  Ok(_)  -> true
  Err(_) -> false
}

fn main() : Int / NetDns = {
  let _ = probe("localhost")
  0
}
